[package]
name = "cpi_ec2"
version = "0.1.1"
edition = "2024"

[lib]
name = "cpi_ec2"
crate-type = ["cdylib"]

[dependencies]
lib_cpi = { version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
aws-config = "1.6.2"
aws-sdk-ec2 = "1.127.0"